--- a/Project/back/codematchr/.gitignore
+++ b/Project/back/codematchr/.gitignore
@@ -25,7 +25,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-application-copy.properties
+application.properties
 
 ### NetBeans ###
 /nbproject/private/
