--- a/Project/back/codematchr/src/main/resources/application.properties
+++ b/Project/back/codematchr/src/main/resources/application.properties
@@ -11,4 +11,33 @@ spring.servlet.multipart.max-request-size=150MB
 file.path=C:/Users/user/Desktop/test
 file.url=http://localhost:4040/api/v1/file/
 
-spring.profiles.include=copy
+# JWT KEY
+secret-key=123456789123456789123456789123456789
+
+#kakao oauth2 설정
+spring.security.oauth2.client.registration.kakao.client-id=abb2de8eda6d712d85da53b011fc7264
+spring.security.oauth2.client.registration.kakao.client-secret=jOZrMFu9eWLE4lMF1lfIgE5SqkNQbSPB
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname
+
+#kakao oauth2 provider 설정
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+
+#naver oauth2 설정
+spring.security.oauth2.client.registration.naver.client-id=dwJT8G94FgHs6TUNbkfn
+spring.security.oauth2.client.registration.naver.client-secret=lbEF3FtqVw
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=email
+
+#naver oauth2 provider 설정
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
